{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 642,
  "lineage": "f797bba9-41d8-daad-dffe-1f42e7ad06d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:listener/app/test-lb-tf/a8b117202126fff4/cb1fe44294f4f596",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:targetgroup/tg1/84efc6548ca3d8f8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:listener/app/test-lb-tf/a8b117202126fff4/cb1fe44294f4f596",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:loadbalancer/app/test-lb-tf/a8b117202126fff4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.tg1",
            "aws_security_group.securitygrouplb",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a4ca00f3cc62905",
            "domain": "vpc",
            "id": "eipalloc-03a4ca00f3cc62905",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-122-8.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.122.8",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-eip"
            },
            "tags_all": {
              "Name": "prod-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2e255ec956ade7f",
            "arn": "arn:aws:ec2:ap-south-1:359399601314:instance/i-0b88feae6245280b2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-027c2801513b80227",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b88feae6245280b2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef1c65b7ec71e40e",
            "private_dns": "ip-10-0-153-82.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.153.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003dd942577800d48",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02eb406441e43acc5",
            "tags": {
              "Name": "Server "
            },
            "tags_all": {
              "Name": "Server "
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00957b1e5929bdd42"
            ]
          },
          "dependencies": [
            "aws_key_pair.terraform",
            "aws_security_group.securitygroupinstance",
            "aws_subnet.private_subnet1",
            "aws_vpc.main",
            "data.aws_ami.ami",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:internet-gateway/igw-02509da184ea7107a",
            "id": "igw-02509da184ea7107a",
            "owner_id": "359399601314",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:loadbalancer/app/test-lb-tf/a8b117202126fff4",
            "arn_suffix": "app/test-lb-tf/a8b117202126fff4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-lb-tf-1588844159.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:loadbalancer/app/test-lb-tf/a8b117202126fff4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fae4fcdb52be69db"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c800ec306aba6b3"
              },
              {
                "subnet_id": "subnet-08e006b9b746d86d5"
              }
            ],
            "subnets": [
              "subnet-02c800ec306aba6b3",
              "subnet-08e006b9b746d86d5"
            ],
            "tags": {
              "Environment": "production",
              "Name": "prod-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "prod-alb"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.securitygrouplb",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:targetgroup/tg1/84efc6548ca3d8f8",
            "arn_suffix": "targetgroup/tg1/84efc6548ca3d8f8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:359399601314:targetgroup/tg1/84efc6548ca3d8f8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a4ca00f3cc62905",
            "association_id": "eipassoc-0918b92649d275381",
            "connectivity_type": "public",
            "id": "nat-007d2ea914161cb29",
            "network_interface_id": "eni-0ce4e1f1c11a2eaa5",
            "private_ip": "10.0.37.117",
            "public_ip": "43.204.122.8",
            "subnet_id": "subnet-08e006b9b746d86d5",
            "tags": {
              "Name": "prod-nat"
            },
            "tags_all": {
              "Name": "prod-nat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:route-table/rtb-0a7af5be365201c1b",
            "id": "rtb-0a7af5be365201c1b",
            "owner_id": "359399601314",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-007d2ea914161cb29",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-privateroute"
            },
            "tags_all": {
              "Name": "prod-privateroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:route-table/rtb-09260f973cfafac6d",
            "id": "rtb-09260f973cfafac6d",
            "owner_id": "359399601314",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02509da184ea7107a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-publicroute"
            },
            "tags_all": {
              "Name": "prod-publicroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2bbfd0f31a154ec",
            "route_table_id": "rtb-0a7af5be365201c1b",
            "subnet_id": "subnet-02eb406441e43acc5"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet1",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0567aff3962a0565c",
            "route_table_id": "rtb-0a7af5be365201c1b",
            "subnet_id": "subnet-038ed667c7ab5c807"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0092fe01b85a11943",
            "route_table_id": "rtb-09260f973cfafac6d",
            "subnet_id": "subnet-08e006b9b746d86d5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet1",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b90e33af283529",
            "route_table_id": "rtb-09260f973cfafac6d",
            "subnet_id": "subnet-02c800ec306aba6b3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_subnet2",
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroupasc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:security-group/sg-0a6d3525fcee1c477",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6d3525fcee1c477",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod.ascsecuritygroup",
            "name_prefix": "",
            "owner_id": "359399601314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-ascsecuritygroup"
            },
            "tags_all": {
              "Name": "prod-ascsecuritygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygroupinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:security-group/sg-00957b1e5929bdd42",
            "description": "allows 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00957b1e5929bdd42",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod.securitygroup",
            "name_prefix": "",
            "owner_id": "359399601314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-securitygroup"
            },
            "tags_all": {
              "Name": "prod-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securitygrouplb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:security-group/sg-0fae4fcdb52be69db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fae4fcdb52be69db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod.lbsecuritygroup",
            "name_prefix": "",
            "owner_id": "359399601314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-lbsecuritygroup"
            },
            "tags_all": {
              "Name": "prod-lbsecuritygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:subnet/subnet-02eb406441e43acc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eb406441e43acc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359399601314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesubnet1"
            },
            "tags_all": {
              "Name": "prod-privatesubnet1"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:subnet/subnet-038ed667c7ab5c807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038ed667c7ab5c807",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "359399601314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-privatesubnet2"
            },
            "tags_all": {
              "Name": "prod-privatesubnet2"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:subnet/subnet-08e006b9b746d86d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e006b9b746d86d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "359399601314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsubnet1"
            },
            "tags_all": {
              "Name": "prod-publicsubnet1"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:subnet/subnet-02c800ec306aba6b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c800ec306aba6b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "359399601314",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-publicsubnet2"
            },
            "tags_all": {
              "Name": "prod-publicsubnet2"
            },
            "vpc_id": "vpc-0f2e6b3cb67ac5b8d"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:359399601314:vpc/vpc-0f2e6b3cb67ac5b8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f4270fb956a9e17d",
            "default_route_table_id": "rtb-04db0d96bb695d9c9",
            "default_security_group_id": "sg-0a5cc97c5b9921068",
            "dhcp_options_id": "dopt-0e0e5da7f767c2206",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f2e6b3cb67ac5b8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04db0d96bb695d9c9",
            "owner_id": "359399601314",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}